# Tech.AI

./: .gitignore  MODELS_AND_ALGORITHMS.md  README.md  pyproject.toml  requirements.txt
scripts/: api.py  demo_cli.py  train_model.py
src/tech_support_ai/: __init__.py  assistant.py  classifier.py  datasets.py  preprocess.py  retriever.py  schema.py
src/tech_support_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_pipeline.py
