[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tech-support-ai"
version = "0.1.0"
description = "Model layer for enterprise laptop support assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
