[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tech-support-ai"
version = "0.1.0"
description = "Model layer for enterprise laptop support assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.28.0",
  "pydantic>=2.7.0",
  "sentence-transformers>=2.2.0",
  "faiss-cpu>=1.7.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
